# ChangeLog for app-emulation/emul-linux-x86-baselibs
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-baselibs/ChangeLog,v 1.162 2013/10/09 07:25:49 tetromino Exp $

*emul-linux-x86-baselibs-20131008-r1 (09 Oct 2013)

  09 Oct 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
  -emul-linux-x86-baselibs-20131008.ebuild,
  +emul-linux-x86-baselibs-20131008-r1.ebuild, files/remove-native:
  Update remove-native to prevent file collisions (bug #487364, acked by Pacho
  Ramos).

*emul-linux-x86-baselibs-20131008 (08 Oct 2013)

  08 Oct 2013; Pacho Ramos <pacho@gentoo.org>
  +emul-linux-x86-baselibs-20131008.ebuild,
  -emul-linux-x86-baselibs-20121202.ebuild,
  -emul-linux-x86-baselibs-20130224-r13.ebuild:
  Version bump, drop old

  24 Aug 2013; Samuli Suominen <ssuominen@gentoo.org>
  emul-linux-x86-baselibs-20130224-r13.ebuild:
  Raise media-libs/tiff dependency to skip non-multilib -r4.

  22 Aug 2013; Michał Górny <mgorny@gentoo.org> metadata.xml:
  Change maintainer to the multilib project.

  21 Aug 2013; Michał Górny <mgorny@gentoo.org> files/remove-native:
  Add /usr/lib32/terminfo to the removal list.

*emul-linux-x86-baselibs-20130224-r13 (21 Aug 2013)

  21 Aug 2013; Alexis Ballier <aballier@gentoo.org>
  -emul-linux-x86-baselibs-20130224-r12.ebuild,
  +emul-linux-x86-baselibs-20130224-r13.ebuild, files/remove-native:
  new revision featuring migrated e2fsprogs-libs, ncurses and gpm

*emul-linux-x86-baselibs-20130224-r12 (16 Aug 2013)

  16 Aug 2013; Alexis Ballier <aballier@gentoo.org>
  -emul-linux-x86-baselibs-20130224-r11.ebuild,
  +emul-linux-x86-baselibs-20130224-r12.ebuild, files/remove-native:
  New revision featuring migrated elfutils/libelf.

*emul-linux-x86-baselibs-20130224-r11 (10 Aug 2013)

  10 Aug 2013; Alexis Ballier <aballier@gentoo.org>
  -emul-linux-x86-baselibs-20130224-r10.ebuild,
  +emul-linux-x86-baselibs-20130224-r11.ebuild, files/remove-native: