@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-baselibs/emul-linux-x86-baselibs-20131008-r1.ebuild,v 1.1 2013/10/09 07:25:49 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-baselibs/emul-linux-x86-baselibs-20131008-r2.ebuild,v 1.1 2013/10/13 02:13:50 floppym Exp $
 
 EAPI=5
 inherit emul-linux-x86
@@ -43,6 +43,7 @@ RDEPEND="!<app-emulation/emul-linux-x86-medialibs-10.2
 		>=sys-libs/e2fsprogs-libs-1.42.7-r1[abi_x86_32(-)]
 		>=sys-libs/ncurses-5.9-r3[abi_x86_32(-)]
 		>=sys-libs/gpm-1.20.7-r2[abi_x86_32(-)]
+		>=dev-libs/gmp-5.1.3-r1[abi_x86_32(-)]
 	)
 	>=sys-libs/glibc-2.15" # bug 340613
 
