@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/gmp/gmp-5.1.3-r1.ebuild,v 1.1 2013/10/12 19:40:19 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/gmp/gmp-5.1.3-r1.ebuild,v 1.4 2013/10/13 02:23:27 floppym Exp $
 
 EAPI="4"
 
@@ -22,7 +22,10 @@ IUSE="doc cxx pgo static-libs"
 
 DEPEND="sys-devel/m4
 	app-arch/xz-utils"
-RDEPEND=""
+RDEPEND="abi_x86_32? (
+	!<=app-emulation/emul-linux-x86-baselibs-20131008-r1
+	!app-emulation/emul-linux-x86-baselibs[-abi_x86_32(-)]
+)"
 
 S=${WORKDIR}/${MY_P}
 
