@@ -1,14 +1,0 @@
-DEFINED_PHASES=install prepare
-DEPEND=>=sys-apps/findutils-4.2.26
-DESCRIPTION=Provides precompiled 32bit libraries
-EAPI=5
-HOMEPAGE=http://dev.gentoo.org/~pacho/emul.html
-IUSE=abi_x86_32 +development
-KEYWORDS=-* ~amd64
-LICENSE=Artistic GPL-1 GPL-2 GPL-3 BSD BSD-2 BZIP2 AFL-2.1 LGPL-2.1 BSD-4 MIT public-domain LGPL-3 LGPL-2 GPL-2-with-exceptions MPL-1.1 OPENLDAP Sleepycat UoI-NCSA ZLIB openafs-krb5-a HPND ISC RSA IJG libmng libtiff openssl tcp_wrappers_license
-RDEPEND=!<app-emulation/emul-linux-x86-medialibs-10.2 abi_x86_32? ( >=sys-libs/zlib-1.2.8-r1[abi_x86_32(-)] >=app-arch/bzip2-1.0.6-r4[abi_x86_32(-)] >=media-libs/libpng-1.5.16-r1:0[abi_x86_32(-)] >=dev-libs/udis86-1.7-r2[abi_x86_32(-)] >=virtual/libffi-3.0.13-r1[abi_x86_32(-)] >=sys-devel/llvm-3.3-r1[abi_x86_32(-)] >=media-libs/libpng-1.2.50-r1:1.2[abi_x86_32(-)] >=media-libs/libjpeg-turbo-1.3.0-r2:0[abi_x86_32(-)] >=sys-libs/libraw1394-2.1.0-r1[abi_x86_32(-)] >=sys-libs/libavc1394-0.5.4-r1[abi_x86_32(-)] >=dev-libs/expat-2.1.0-r3[abi_x86_32(-)] >=virtual/libusb-0-r1:0[abi_x86_32(-)] >=virtual/libusb-1-r1:1[abi_x86_32(-)] >=virtual/udev-206-r1[abi_x86_32(-)] >=media-libs/tiff-4.0.3-r5:0[abi_x86_32(-)] >=sys-apps/attr-2.4.47-r1[abi_x86_32(-)] >=dev-libs/glib-2.36.3-r2:2[abi_x86_32(-)] >=media-libs/lcms-2.5-r1:2[abi_x86_32(-)] >=app-text/libpaper-1.1.24-r2[abi_x86_32(-)] >=media-libs/tiff-3.9.7-r1:3[abi_x86_32(-)] || ( >=dev-libs/elfutils-0.155-r1[abi_x86_32(-)] >=dev-libs/libelf-0.8.13-r2[abi_x86_32(-)] ) >=sys-libs/e2fsprogs-libs-1.42.7-r1[abi_x86_32(-)] >=sys-libs/ncurses-5.9-r3[abi_x86_32(-)] >=sys-libs/gpm-1.20.7-r2[abi_x86_32(-)] ) >=sys-libs/glibc-2.15
-RESTRICT=strip
-SLOT=0
-SRC_URI=http://dev.gentoo.org/~pacho/emul/emul-linux-x86-baselibs-20131008.tar.xz
-_eclasses_=emul-linux-x86	849070907fe4e8553daad52137b99265	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953
-_md5_=2bf38e5fadf1c5dfae9575de515459b9
