@@ -1,6 +1,15 @@
 # ChangeLog for dev-libs/gmp
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/gmp/ChangeLog,v 1.180 2013/10/12 19:40:19 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/gmp/ChangeLog,v 1.183 2013/10/13 02:23:27 floppym Exp $
+
+  13 Oct 2013; Mike Gilbert <floppym@gentoo.org> gmp-5.1.3-r1.ebuild:
+  Steal more complete blocker set from sys-libs/gpm.
+
+  13 Oct 2013; Mike Gilbert <floppym@gentoo.org> gmp-5.1.3-r1.ebuild:
+  Make the blocker more specific.
+
+  13 Oct 2013; Mike Gilbert <floppym@gentoo.org> gmp-5.1.3-r1.ebuild:
+  Add blocker on old emul-linux-x86-baselibs.
 
 *gmp-5.1.3-r1 (12 Oct 2013)
 
